// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCta renders a button when only onclick is provided 1`] = `
<button
  className="jfDrEm"
  href={null}
  onClick={[Function]}
  rel=""
  size={
    Object {
      "large": null,
      "medium": null,
      "small": null,
    }
  }
  target="_self"
>
  I am a link
</button>
`;

exports[`LinkCta renders a default LinkCta 1`] = `
<a
  className="dVBByn"
  href="http://localhost/"
  onClick={null}
  rel=""
  size={
    Object {
      "large": null,
      "medium": null,
      "small": null,
    }
  }
  target="_self"
>
  I am a link
</a>
`;

exports[`LinkCta renders a span when no href or onClick provided 1`] = `
<span
  className="bvcokc"
  href={null}
  onClick={null}
  rel=""
  size={
    Object {
      "large": null,
      "medium": null,
      "small": null,
    }
  }
  target="_self"
>
  I am a link
</span>
`;

exports[`LinkCta static size as pixels 1`] = `
<span
  className="cXeUXr"
  href={null}
  onClick={null}
  rel=""
  size={
    Object {
      "large": "20px",
      "medium": "20px",
      "small": "20px",
    }
  }
  target="_self"
>
  I am a link
</span>
`;

exports[`LinkCta static size from typography 1`] = `
<span
  className="jujMtQ"
  href={null}
  onClick={null}
  rel=""
  size={
    Object {
      "large": "normal",
      "medium": "normal",
      "small": "normal",
    }
  }
  target="_self"
>
  I am a link
</span>
`;
